<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignInActivity">

    <ImageView
        android:id="@+id/imvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_logo" />


    <LinearLayout
        android:id="@+id/lnEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_edt_outline"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvLogo">

        <EditText
            android:id="@+id/edtSEmail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:textCursorDrawable="@drawable/cursor_edt"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:background="@drawable/bg_enter_code"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:paddingVertical="2dp"
            android:text="@string/take_code"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/edtEmail"
            app:layout_constraintEnd_toEndOf="@+id/edtEmail"
            app:layout_constraintTop_toTopOf="@+id/edtEmail" />

    </LinearLayout>


    <EditText
        android:id="@+id/edtCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_edt_outline"
        android:hint="@string/enter_code"
        android:inputType="number"
        android:paddingStart="16dp"
        android:textCursorDrawable="@drawable/cursor_edt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnEmail"
        tools:ignore="RtlSymmetry" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCode" />

</androidx.constraintlayout.widget.ConstraintLayout>